add midnight reloader, fix time slots not displaying, add 15m update, disable old time slots from reservations

--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,22 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      // At midnight, reload the page since it can persist if it's opened
+      // as a PWA in the background
+      var milliNow = new Date().getTime()
+      var midnight = new Date()
+      midnight.setHours(23)
+      midnight.setMinutes(59)
+      midnight.setSeconds(59)
+
+      // add 5 minutes for padding in case client time is slightly offset
+      var milliUntilMidnight = (midnight.getTime() - milliNow) + (5 * 60000)
+
+      setTimeout(() => {
+        window.location.reload()
+      }, milliUntilMidnight)
+    </script>
   </body>
 </html>
