--- a/public/index.html
+++ b/public/index.html
@@ -78,5 +78,16 @@
         Raven.captureException(e)
       }
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114953352-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-114953352-1');
+    </script>
+
   </body>
 </html>
