--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <script>
       Raven.config('https://f12d35a63e3f4264a168eb0e8caa6802@sentry.io/287059').install()
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.min.js"></script>
   </head>
   <body>
     <noscript>
